[package]
name = "rust-mem-proofs"
description = "Various memory-related implementations and benchmarks"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"
license = "MIT"

[dependencies]
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "por"
harness = false
